Added build scripts for build and package

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "electron": "electron .",
-    "electron-build": "ng build --prod && electron ."
+    "electron:build": "ng build --prod && electron .",
+    "electron:package-OSX": "yarn run build && npx electron-packager . --platform=darwin --out=build/",
+    "electron:package-Linux": "yarn run build && npx electron-packager . --platform=linux --out=build/",
+    "electron:package-Windows": "yarn run build && npx electron-packager . --platform=win32 --out=build/"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +41,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "electron": "^7.1.2",
+    "electron-packager": "^14.1.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
